--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h1 class="text-center text-primary">Todo App</h1>
       <div class="input-group-prepend">
         <input class="form-control" placeholder="Add todo" name="todo" [(ngModel)]="todo">
-        <span class="input-group-text" (click)="addToDo()">Add</span>
+        <span class="input-group-text" (click)="addToDo()"><i class="material-icons">add</i></span>
       </div>
     </div>
   </form>
