Switched to reactive forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <form>
+  <form [formGroup]="todoForm" (ngSubmit)="addToDo()">
     <div class="form-group">
       <h1 class="text-center text-primary">Todo App</h1>
       <div class="input-group-prepend">
-        <input class="form-control" placeholder="Add todo" name="todo" [(ngModel)]="todo">
+        <input class="form-control" placeholder="Add todo" name="todo" formControlName="todo">
         <span class="input-group-text" (click)="addToDo()"><i class="material-icons">add</i></span>
       </div>
     </div>
